Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.6.0 Alpha
-
Fix Version/s: 5.6.0 RC
-
Component/s: QPA: EGLFS
-
Labels:None
-
Commits:09e8d69b7a5c6f394b6a43f6c485d26f74189541
Description
Apps using QOpenGLWidget or QQuickWidget started showing a "QOpenGLCompositorBackingStore: Texture is not valid in the current context" warning when running to eglfs with 5.6. This was not there before.